@@ -1,6 +1,5 @@
 <li class="kchild"{gensource}{codewrapperLeft}{codewrapperRight}>
-    <div class="kel kexpand {isExpanded} {ktype}">{connectorLeft}<span class="kname">{name}</span>{connectorRight}<em class="karrow ktype">=</em><span class="kshort">{normal}</span><em class="ktype">({type})</em>
-        <span class="kolps">&nbsp;</span>
+    <div class="kel kexpand {isExpanded} {ktype}">{connectorLeft}<span class="kname">{name}</span>{connectorRight}<em class="karrow ktype">=</em><span class="kshort">{normal}</span><em class="ktype">({type})</em><span class="kolps">&nbsp;</span>
         {sourcebutton}
         <div class="kodsp" style="display: none"></div>
         {help}
