@@ -1,7 +1,6 @@
 <li class="kchild"{gensource}{codewrapperLeft}{codewrapperRight}>
     <div class="kel {expand} {type-classes}">
-        <span class="kel-bg {type-classes}"></span>{connectorLeft}<span class="kname">{name}</span>{connectorRight}<em class="karrow ktype">=</em><span class="kshort">{normal}</span>{callable}<em class="ktype">({type})</em>
-        <span class="kolps">&nbsp;</span>
+        <span class="kel-bg {type-classes}"></span>{connectorLeft}<span class="kname">{name}</span>{connectorRight}<em class="karrow ktype">=</em><span class="kshort">{normal}</span>{callable}<em class="ktype">({type})</em><span class="kolps">&nbsp;</span>
         {sourcebutton}
         <div class="kodsp" style="display: none"></div>
         {help}
