@@ -1,9 +1,5 @@
 <li class="kchild" {gensource}{codewrapperLeft}{codewrapperRight} >
-  <div class="kel {expand} {type-classes}" {addjson}>
-    <span class="kname">{name}</span><em class="karrow ktype">=></em><span class="kshort">{normal}</span>
-    <em class="ktype">({type})</em>
-    {callable}
-    <span class="kolps">&nbsp;</span>{sourcebutton}
+  <div class="kel {expand} {type-classes}" {addjson}><span class="kname">{name}</span><em class="karrow ktype">=></em><span class="kshort">{normal}</span><em class="ktype">({type})</em>{callable}    <span class="kolps">&nbsp;</span>{sourcebutton}
     <div class="kodsp" style="display: none"></div>
   </div>
 
