@@ -352,6 +352,7 @@
           margin-right: 13px;
           line-height: 16px; }
       .kwrapper .kchild .kel .ktype, .kfatalwrapper-outer .kchild .kel .ktype {
+        padding-left: 5px;
         font-style: normal;
         margin: 0; }
       .kwrapper .kchild .kel .kgencode, .kfatalwrapper-outer .kchild .kel .kgencode {
