@@ -466,6 +466,7 @@ $fontLight: lighter 10px tahoma, verdana;
       }
 
       .ktype {
+        padding-left: 5px;
         font-style: normal;
         margin: 0;
       }
