@@ -5,6 +5,7 @@
   double escaping issues in the backend of some systems.
 - Bugfix: The method analysis doesn't take traits into account.
 - Bugfix: The property analysis doesn't take traits into account.
+- Bugfix: Remove the copy-pasta spaces from the skins.
 
 3.0.1
 - Change: All singelton classes now add themself to the pool as
